; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/unarr/rar/extr_uncompress-rar.c_PpmdRAR_RangeDec_CreateVTable.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/unarr/rar/extr_uncompress-rar.c_PpmdRAR_RangeDec_CreateVTable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.CPpmdRAR_RangeDec = type { i32*, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32, i32 }

@Range_GetThreshold = common dso_local global i32 0, align 4
@Range_Decode_RAR = common dso_local global i32 0, align 4
@Range_DecodeBit_RAR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.CPpmdRAR_RangeDec*, i32*)* @PpmdRAR_RangeDec_CreateVTable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @PpmdRAR_RangeDec_CreateVTable(%struct.CPpmdRAR_RangeDec* %0, i32* %1) #0 {
  %3 = alloca %struct.CPpmdRAR_RangeDec*, align 8
  %4 = alloca i32*, align 8
  store %struct.CPpmdRAR_RangeDec* %0, %struct.CPpmdRAR_RangeDec** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load i32, i32* @Range_GetThreshold, align 4
  %6 = load %struct.CPpmdRAR_RangeDec*, %struct.CPpmdRAR_RangeDec** %3, align 8
  %7 = getelementptr inbounds %struct.CPpmdRAR_RangeDec, %struct.CPpmdRAR_RangeDec* %6, i32 0, i32 1
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 2
  store i32 %5, i32* %8, align 8
  %9 = load i32, i32* @Range_Decode_RAR, align 4
  %10 = load %struct.CPpmdRAR_RangeDec*, %struct.CPpmdRAR_RangeDec** %3, align 8
  %11 = getelementptr inbounds %struct.CPpmdRAR_RangeDec, %struct.CPpmdRAR_RangeDec* %10, i32 0, i32 1
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 1
  store i32 %9, i32* %12, align 4
  %13 = load i32, i32* @Range_DecodeBit_RAR, align 4
  %14 = load %struct.CPpmdRAR_RangeDec*, %struct.CPpmdRAR_RangeDec** %3, align 8
  %15 = getelementptr inbounds %struct.CPpmdRAR_RangeDec, %struct.CPpmdRAR_RangeDec* %14, i32 0, i32 1
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  store i32 %13, i32* %16, align 8
  %17 = load i32*, i32** %4, align 8
  %18 = load %struct.CPpmdRAR_RangeDec*, %struct.CPpmdRAR_RangeDec** %3, align 8
  %19 = getelementptr inbounds %struct.CPpmdRAR_RangeDec, %struct.CPpmdRAR_RangeDec* %18, i32 0, i32 0
  store i32* %17, i32** %19, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
